add territory feature
